--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/lucasfjportela/react-native-actioncable#readme",
   "dependencies": {
-    "actioncable": "^6.0.0-rc2"
+    "actioncable": "github:rails/rails#6-0-stable"
   }
 }
