--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/lucasfjportela/react-native-actioncable#readme",
   "dependencies": {
-    "actioncable": "github:rails/actioncable#6-0-stable"
+                   "github:joltup/rn-fetch-blob#master"
+    "actioncable": "github:rails/@rails/actioncable#6-0-stable"
   }
 }
