--- a/package.json
+++ b/package.json
@@ -6,15 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "lucasfjportela/react-native-actioncable"
-  },
-  "keywords": [
-    "ActionCable",
-    "react",
-    "native"
-  ],
   "author": "Li Jie <cpunion@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -22,6 +13,6 @@
   },
   "homepage": "https://github.com/lucasfjportela/react-native-actioncable#readme",
   "dependencies": {
-    "actioncable": "git+https://github.com/lucasfjportela/rails#dev"
+    "actioncable": "github:lucasfjportela/rails#dev"
   }
 }
