--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/lucasfjportela/react-native-actioncable#readme",
   "dependencies": {
-    "actioncable": "github:lucasfjportela/rails#dev"
+    "@lucasfjportela/actioncable": "5.2.3"
   }
 }
