--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/lucasfjportela/react-native-actioncable#readme",
   "dependencies": {
-    "@lucasfjportela/rails": "5.2.3"
+    "actioncable": "5.2.3"
   }
 }
