--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/lucasfjportela/react-native-actioncable#readme",
   "dependencies": {
-    "rn-action-cable": "5.2.4"
+    "rn-actioncable": "5.2.4"
   }
 }
